tests/cases/invalid/records/record-when-missing-arrow/example.mld
/record @contact = {
  facts: [email: string],
  when [
    internal
  ]
}
